# SO2

./: CMakeLists.txt  README.md  main.cpp
project2/: CMakeLists.txt  README.md  client.cpp  common.h  server.cpp
